# onewaypass

./: Cargo.toml  README.md
docs/: goal_omissions.md  goals.md  problems.md  sirrantsalot.md  todo.md
src/: main.rs
