# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2023 - 2024  Andy Frank Schoknecht

[package]
version = "0.0.0"
authors = ["SchokiCoder <afschoknecht@tutanota.com>"]
repository = "https://github.com/SchokiCoder/onewaypass"
edition = "2021"
license = "GPL-2.0-or-later"
readme = "README.md"
publish = false
